# options-pricing-engine

./: README.md  generate_results.py  pricing_results.json  pyproject.toml  requirements.txt  visualize_results.py
.github/workflows/: ci.yml
notebooks/: comparison_demo.ipynb  digital_options_demo.ipynb  method_convergence_demo.ipynb  portfolio_risk_demo.ipynb  volatility_smile_demo.ipynb
src/: __init__.py
src/analysis/: __init__.py  convergence.py
src/core/: __init__.py  portfolio.py
src/models/: __init__.py  binomial_tree.py  black_scholes.py  digital.py
src/options_pricing_engine/: __init__.py  cli.py
src/options_pricing_engine/analysis/: __init__.py  convergence.py  volatility_smile.py
src/options_pricing_engine/core/: __init__.py  option_types.py  portfolio.py
src/options_pricing_engine/models/: __init__.py  binomial_tree.py  black_scholes.py  digital.py  implied_volatility.py  monte_carlo.py
tests/: __init__.py  test_binomial_tree.py  test_black_scholes.py  test_digital.py  test_implied_volatility.py  test_monte_carlo.py  test_portfolio.py
